[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.1.0",
    "ipykernel>=7.2.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.83",
    "langchain-groq>=0.3.8",
    "langgraph>=0.2.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
]
